--- a/protocol_CTIMP.qmd
+++ b/protocol_CTIMP.qmd
@@ -167,7 +167,7 @@ Name: (please print): Position:\
 <!-- Define all unusual or ‘technical’ terms related to the trial.  Add or delete as appropriate to your trial.  Maintain alphabetical order for ease of reference. -->
 
 |                |                                                                                                                        |
-|----------------|------------------------------------------------------------------------------------------------------------------------|
+|------------------------|-----------------------------------------------|
 | AE             | Adverse Event                                                                                                          |
 | AR             | Adverse Reaction                                                                                                       |
 | CA             | Competent Authority                                                                                                    |
@@ -217,9 +217,7 @@ Name: (please print): Position:\
 | TMF            | Trial Master File                                                                                                      |
 | TMG            | Trial Management Group                                                                                                 |
 | TSC            | Trial Steering Committee                                                                                               |
-
 ### TRIAL SUMMARY
-
 <!-- It may be useful to include a brief synopsis of the trial for quick reference. Complete information and, if required, add additional rows. -->
 
 | Trial Title                                |                |
@@ -241,62 +239,139 @@ Name: (please print): Position:\
 
 : Trial Summary
 
-v.  ROLE OF TRIAL SPONSOR AND FUNDER <!-- Aim: To clarify the potential influence of sponsor and funders over the trial --> <!-- The sponsor can be defined as the company, institution, or organisation assuming overall responsibility for the initiation and management of the trial, and is not necessarily the main funder. Identification of the trial sponsor provides transparency and accountability.  --> <!-- The protocol should explicitly outline the roles and responsibilities of the sponsor(s) and any funder(s) in trial design, conduct, data analysis and interpretation, manuscript writing, and dissemination of results. It is also important to state the obligation of the sponsor or funder in terms of the final decision regarding any of these aspects of the trial. -->
+v. ROLE OF TRIAL SPONSOR AND FUNDER
+<!-- Aim: To clarify the potential influence of sponsor and funders over the trial -->
+<!-- The sponsor can be defined as the company, institution, or organisation assuming overall responsibility for the initiation and management of the trial, and is not necessarily the main funder. Identification of the trial sponsor provides transparency and accountability.  -->
+<!-- The protocol should explicitly outline the roles and responsibilities of the sponsor(s) and any funder(s) in trial design, conduct, data analysis and interpretation, manuscript writing, and dissemination of results. It is also important to state the obligation of the sponsor or funder in terms of the final decision regarding any of these aspects of the trial. -->
 
 <!-- NB in a CTIMP the sponsor has legal responsibilities that cannot be delegated. -->
 
-## ROLES AND RESPONSIBILITIES OF TRIAL MANAGEMENT COMMITEES/GROUPS & INDIVIDUALS
-
+## ROLES AND RESPONSIBILITIES OF TRIAL MANAGEMENT COMMITEES/GROUPS &    INDIVIDUALS
 ### Trial Management Committees
-
 <!-- Aim: To outline the various committees or groups involved in trial coordination and conduct.  -->
-
 <!-- There are three main trial management groups which may be involved in the set up and management of a clinical trial, depending on the trial size, design, number of sites and documented risk assessment of the trial. For each committee/group the protocol should state their roles and responsibilities and degree of independence from Sponsor and Investigators. If not included in the document the protocol should state where the information on the committee/group can be found. -->
-
--   Trial Steering Committee <!-- The TSC must have a majority independent representation, including the Chair, meet regularly and send reports to the sponsor. Lay members or patient representatives are desirable -->
--   Data Monitoring (and ethics) Committee <!--    Independence is a key characteristic of a Data Monitoring Committee where the committee members are completely uninvolved in the running of the trial and who cannot be unfairly influenced (either directly or indirectly) by people, or institutions, involved in the trial. -->
--   Trial Management Group <!--    The Trial Management Group should meet regularly to ensure all practical details of the trial are progressing well and working well and everyone within the trial understands them. --> <!-- For guidance on Trial Steering Committees & Data Monitoring Committees follow this link --> <!-- http://www.hra.nhs.uk/documents/2013/10/data-monitoring-committees-in-clinical-trials.pdf --> <!-- For guidance on Data Monitoring Committee Charters follow this link --> <!-- http://www.ema.europa.eu/docs/en_GB/document_library/Scientific_guideline/2009/09/WC500003635.pdf -->
+-  Trial Steering Committee
+<!-- The TSC must have a majority independent representation, including the Chair, meet regularly and send reports to the sponsor. Lay members or patient representatives are desirable -->
+-  Data Monitoring (and ethics) Committee 
+<!-- 	Independence is a key characteristic of a Data Monitoring Committee where the committee members are completely uninvolved in the running of the trial and who cannot be unfairly influenced (either directly or indirectly) by people, or institutions, involved in the trial. -->
+- Trial Management Group
+<!-- 	The Trial Management Group should meet regularly to ensure all practical details of the trial are progressing well and working well and everyone within the trial understands them. -->
+<!-- For guidance on Trial Steering Committees & Data Monitoring Committees follow this link -->
+<!-- http://www.hra.nhs.uk/documents/2013/10/data-monitoring-committees-in-clinical-trials.pdf -->
+<!-- For guidance on Data Monitoring Committee Charters follow this link -->
+<!-- http://www.ema.europa.eu/docs/en_GB/document_library/Scientific_guideline/2009/09/WC500003635.pdf -->
 
 ### Protocol contributors
-
 <!-- Aim: To describe all the contributors to the protocol -->
-
 <!-- The protocol should:  -->
+<!-- •	Describe the input of relevant expertise from individuals for example, statisticians, pharmacists, pathologists and radiation experts. -->
+<!-- •	Describe in what aspects of the protocol design have patients, service users, and/or their carers, or members of the public been involved.  -->
 
-<!-- •  Describe the input of relevant expertise from individuals for example, statisticians, pharmacists, pathologists and radiation experts. -->
+## KEY WORDS:	Insert relevant key words to describe the trial; no more than 6 phrases
 
-<!-- •  Describe in what aspects of the protocol design have patients, service users, and/or their carers, or members of the public been involved.  -->
+ix. TRIAL FLOW CHART
+<!-- Aim: To give readers a schematic overview of the trial -->
+<!-- A flow diagram should be included. -->
+<!-- Careful consideration must be given by the protocol authors to ensure that the protocol is sensibly structured and ordered to allow users of the document to follow the patient and trial pathway accurately and with ease. Flow diagrams are helpful tools to guide users of the protocol through the patient and trial pathway, for instance a participant pathway detailing intended fit of the screening and recruitment process with usual practice may be helpful for complex intervention trials and a schedule of events in table format is also recommended. The schedule of events can be included where most appropriate in the protocol.   -->
+<!-- Key information to convey includes the timing of all trial activity, starting from initial eligibility screening, each trial visit through to trial close-out and long term follow-up; time periods during which trial interventions will be administered; and the procedures and assessments performed at each visit (with reference to specific data collection forms, if relevant)  -->
+##	BACKGROUND
+Aim: To place the trial in the context of available evidence.
+<!-- The background should be supported by appropriate references to the published literature on the disease or condition, its treatment and the use of the trial drug for the indication and contain:- -->
+<!-- •	an up-to-date systematic review of relevant studies, new research should build on formal review of prior evidence -->
+<!-- •	a brief description of the proposed trial -->
+<!-- •	a description of the population to be studied -->
+<!-- •	the investigational product(s) and their mechanism of action -->
+<!-- •	relevant data from preclinical/non-clinical studies -->
+<!-- •	relevant data from previous clinical trials such as efficacy, safety, tolerability, pharmacokinetics & pharmacodynamics -->
+<!-- •	if no data is available, include a statement that there is no available clinical research data to date on the investigational product -->
+<!-- It should be written so it is easy to read and understand by someone with a basic sense of the topic who may not necessarily be an expert in the area. Some explanation of terms and concepts is likely to be beneficial.  -->
 
-## KEY WORDS: Insert relevant key words to describe the trial; no more than 6 phrases
+2	RATIONALE 
+<!-- Aim: To explain why the research questions being asked are important and why closely related questions are not being covered.  -->
+<!-- This should include: -->
+<!-- •	a clear explanation of the research question/hypothesis and the justification of the trial i.e. why the question is worth asking and, through consultation with public and patient groups, why this is worthwhile to patients. Replication to check the validity of previous research is justified, but unnecessary duplication is unethical. -->
+<!-- •	the currently available treatment(s) and their limitations, why you think the IMP(s) might be an improvement on those treatments, why the treatment difference is clinically important to patients and if it is  realistic. (The treatment difference is often referred to as the minimum clinically important difference or the difference we should not want to miss. A drug which reduces everyone’s systolic blood pressure by 2 mm of mercury may be genuinely effective, but the effect would not form the basis of a routine intervention) -->
+<!-- •	this justification is particularly important if the trial proposes to use the IMP: -->
+<!-- o	in children or in adults unable to consent for themselves -->
+<!-- o	in higher doses -->
+<!-- o	for longer duration -->
+<!-- o	in a participant population that might handle it differently (e.g. hepatic or renally impaired patients, children, elderly or immunocompromised individuals) -->
+<!-- o	it is being used in combination with another medicinal product -->
+<!-- o	the indication/ medical condition compromises the participant’s tolerance -->
+<!-- o	in healthy volunteers -->
+<!-- •	the rationale for the use of a placebo in the trial if one is being used -->
+<!-- •	justification for the choice of route of administration, dosage, dosage regimen, and treatment period(s) -->
+<!-- •	it should also include an explanation and justification as to the choice of control interventions/comparators especially if it  involves withholding or delaying standard of care -->
 
-ix. TRIAL FLOW CHART <!-- Aim: To give readers a schematic overview of the trial --> <!-- A flow diagram should be included. --> <!-- Careful consideration must be given by the protocol authors to ensure that the protocol is sensibly structured and ordered to allow users of the document to follow the patient and trial pathway accurately and with ease. Flow diagrams are helpful tools to guide users of the protocol through the patient and trial pathway, for instance a participant pathway detailing intended fit of the screening and recruitment process with usual practice may be helpful for complex intervention trials and a schedule of events in table format is also recommended. The schedule of events can be included where most appropriate in the protocol.   --> <!-- Key information to convey includes the timing of all trial activity, starting from initial eligibility screening, each trial visit through to trial close-out and long term follow-up; time periods during which trial interventions will be administered; and the procedures and assessments performed at each visit (with reference to specific data collection forms, if relevant)  --> \## BACKGROUND Aim: To place the trial in the context of available evidence. <!-- The background should be supported by appropriate references to the published literature on the disease or condition, its treatment and the use of the trial drug for the indication and contain:- --> <!-- •  an up-to-date systematic review of relevant studies, new research should build on formal review of prior evidence --> <!-- •  a brief description of the proposed trial --> <!-- •  a description of the population to be studied --> <!-- •  the investigational product(s) and their mechanism of action --> <!-- •  relevant data from preclinical/non-clinical studies --> <!-- •  relevant data from previous clinical trials such as efficacy, safety, tolerability, pharmacokinetics & pharmacodynamics --> <!-- •  if no data is available, include a statement that there is no available clinical research data to date on the investigational product --> <!-- It should be written so it is easy to read and understand by someone with a basic sense of the topic who may not necessarily be an expert in the area. Some explanation of terms and concepts is likely to be beneficial.  -->
-
-2 RATIONALE <!-- Aim: To explain why the research questions being asked are important and why closely related questions are not being covered.  --> <!-- This should include: --> <!-- •  a clear explanation of the research question/hypothesis and the justification of the trial i.e. why the question is worth asking and, through consultation with public and patient groups, why this is worthwhile to patients. Replication to check the validity of previous research is justified, but unnecessary duplication is unethical. --> <!-- •  the currently available treatment(s) and their limitations, why you think the IMP(s) might be an improvement on those treatments, why the treatment difference is clinically important to patients and if it is  realistic. (The treatment difference is often referred to as the minimum clinically important difference or the difference we should not want to miss. A drug which reduces everyone’s systolic blood pressure by 2 mm of mercury may be genuinely effective, but the effect would not form the basis of a routine intervention) --> <!-- •  this justification is particularly important if the trial proposes to use the IMP: --> <!-- o  in children or in adults unable to consent for themselves --> <!-- o  in higher doses --> <!-- o  for longer duration --> <!-- o  in a participant population that might handle it differently (e.g. hepatic or renally impaired patients, children, elderly or immunocompromised individuals) --> <!-- o  it is being used in combination with another medicinal product --> <!-- o  the indication/ medical condition compromises the participant’s tolerance --> <!-- o  in healthy volunteers --> <!-- •  the rationale for the use of a placebo in the trial if one is being used --> <!-- •  justification for the choice of route of administration, dosage, dosage regimen, and treatment period(s) --> <!-- •  it should also include an explanation and justification as to the choice of control interventions/comparators especially if it  involves withholding or delaying standard of care -->
-
-2.1 Assessment and management of risk <!-- Aim: To describe a risk/benefit analysis plus risk management of all the medication involved in the trial (whether in or outside of licence).  --> <!-- The following should be described: --> <!-- •  the known and potential risks and benefits to human participants  --> <!-- •  how high the risk is compared to normal standard practice --> <!-- •  frequency of risk --> <!-- •  how the risk will be minimised/managed -->
+2.1	Assessment and management of risk
+<!-- Aim: To describe a risk/benefit analysis plus risk management of all the medication involved in the trial (whether in or outside of licence).  -->
+<!-- The following should be described: -->
+<!-- •	the known and potential risks and benefits to human participants  -->
+<!-- •	how high the risk is compared to normal standard practice -->
+<!-- •	frequency of risk -->
+<!-- •	how the risk will be minimised/managed -->
 
 <!-- Consider the starting dose, dose increments, dose escalation, administration of doses, stopping rules and the resources required by site(s); particularly in terms of facilities and staff, procedures, type of patients, staff training required.  -->
-
 <!-- Please refer to the following documentation in preparing this section: -->
-
 <!-- https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/343677/Risk-adapted_approaches_to_the_management_of_clinical_trials_of_investigational_medicinal_products.pdf   -->
-
 <!-- The MHRA GCP forum has a useful Q&A: -->
-
 <!-- http://forums.mhra.gov.uk/forumdisplay.php?1-Good-Clinical-Practice-(GCP) -->
 
-This trial is categorised as: (delete as appropriate) <!--    • Type A = No higher than the risk of standard medical care --> <!--    • Type B = Somewhat higher than the risk of standard medical care --> <!--    • Type C = Markedly higher than the risk of standard medical care --> <!-- See Appendix 1 -->
+This trial is categorised as: (delete as appropriate)
+<!--  	• Type A = No higher than the risk of standard medical care -->
+<!-- 	• Type B = Somewhat higher than the risk of standard medical care -->
+<!-- 	• Type C = Markedly higher than the risk of standard medical care -->
+<!-- See Appendix 1 -->
 
-3 OBJECTIVES AND OUTCOME MEASURES/ENDPOINTS <!-- Aim: To define the primary research question, to address a specific hypothesis and to clearly define the secondary objectives --> <!-- The objectives are generally phrased using neutral wording (e.g., “to compare the effect of intervention A versus intervention B on outcome X”) rather than in terms of a particular direction of effect.  --> <!-- 3.1    Primary objective --> <!-- Aim: To define the primary research question, to address a specific hypothesis  --> <!-- The protocol should define: --> <!-- •  the hypothesis which should be stated in quantifiable terms; e.g. “the experimental treatment will result in 12 months of additional survival compared to the control treatment” --> <!-- •  the null and the alternative hypotheses --> <!-- •  for multi-arm trials, the objectives should clarify the way in which all the intervention groups will be compared (e.g., A versus B; A versus C) --> <!--  A useful guide to use in the development of a specific research question are the PICOT criteria: --> <!--    P   Population (patients) - What specific patient population are you interested in? --> <!--    I   Intervention (for intervention studies only) - What is your investigational     intervention? --> <!--    C   Comparison group - What is the main alternative to compare with the     intervention? --> <!--    O   Outcome of interest - What do you intend to accomplish, measure, improve or     affect? --> <!--    T   Time - What is the appropriate follow-up time to assess outcome -->
+3	OBJECTIVES AND OUTCOME MEASURES/ENDPOINTS
+<!-- Aim: To define the primary research question, to address a specific hypothesis and to clearly define the secondary objectives -->
+<!-- The objectives are generally phrased using neutral wording (e.g., “to compare the effect of intervention A versus intervention B on outcome X”) rather than in terms of a particular direction of effect.  -->
+<!-- 3.1	Primary objective -->
+<!-- Aim: To define the primary research question, to address a specific hypothesis  -->
+<!-- The protocol should define: -->
+<!-- •	the hypothesis which should be stated in quantifiable terms; e.g. “the experimental treatment will result in 12 months of additional survival compared to the control treatment” -->
+<!-- •	the null and the alternative hypotheses -->
+<!-- •	for multi-arm trials, the objectives should clarify the way in which all the intervention groups will be compared (e.g., A versus B; A versus C) -->
+<!--  A useful guide to use in the development of a specific research question are the PICOT criteria: -->
+<!-- 	P	Population (patients) - What specific patient population are you interested in? -->
+<!-- 	I	Intervention (for intervention studies only) - What is your investigational 	intervention? -->
+<!-- 	C	Comparison group - What is the main alternative to compare with the 	intervention? -->
+<!-- 	O	Outcome of interest - What do you intend to accomplish, measure, improve or 	affect? -->
+<!-- 	T	Time - What is the appropriate follow-up time to assess outcome -->
 
-3.2 Secondary objectives <!-- Aim: To clearly define the secondary objectives --> <!-- The protocol should describe the secondary objectives which: --> <!-- •  may or may not be hypothesis-driven --> <!-- •  may include secondary outcomes --> <!-- •  may include more general non-experimental objectives (e.g., to develop a registry, to collect natural history data) -->
+3.2	Secondary objectives
+<!-- Aim: To clearly define the secondary objectives -->
+<!-- The protocol should describe the secondary objectives which: -->
+<!-- •	may or may not be hypothesis-driven -->
+<!-- •	may include secondary outcomes -->
+<!-- •	may include more general non-experimental objectives (e.g., to develop a registry, to collect natural history data) -->
 
-3.3 Outcome measures/endpoints <!-- Aim: To define primary and secondary endpoints/outcomes for the trial which usually appear in the objectives and sample size calculation. --> <!-- An ideal endpoint/outcome is valid, reproducible, relevant to the target population, and responsive to changes in the health condition being studied. The COMET (Core Outcome Measures in Effectiveness Trials www.comet-initiative.org ) provides a common set of key trial outcomes and it is beneficial to ascertain whether there is a core outcome set relevant to the trial. This does not preclude inclusion of additional relevant outcomes. --> <!-- The protocol should define: --> <!-- •  the endpoint/outcome of main interest (primary outcome 3.4) --> <!-- •  the remaining endpoints/outcomes (secondary outcomes 3.5) --> <!-- •  whether the endpoint/outcome reflect efficacy (beneficial effect) or harm (adverse effect) --> <!-- •  the rationale for the choice of trial endpoint/outcome --> <!-- •  For each endpoint/outcome, the trial protocol should define four components:  --> <!-- o  the specific measurement variable, which corresponds to the data collected directly from trial participants (e.g. all cause mortality);  --> <!-- o  the participant-level analysis metric, which corresponds to the format of the outcome data that will be used from each trial participant for analysis (e.g., change from baseline, final value, time to event); --> <!-- o   the method of aggregation, which refers to the summary measure format for each trial group (e.g., mean, proportion with score > 2);  --> <!-- o  the specific measurement time point of interest for analysis -->
+3.3	Outcome measures/endpoints
+<!-- Aim: To define primary and secondary endpoints/outcomes for the trial which usually appear in the objectives and sample size calculation. -->
+<!-- An ideal endpoint/outcome is valid, reproducible, relevant to the target population, and responsive to changes in the health condition being studied. The COMET (Core Outcome Measures in Effectiveness Trials www.comet-initiative.org ) provides a common set of key trial outcomes and it is beneficial to ascertain whether there is a core outcome set relevant to the trial. This does not preclude inclusion of additional relevant outcomes. -->
+<!-- The protocol should define: -->
+<!-- •	the endpoint/outcome of main interest (primary outcome 3.4) -->
+<!-- •	the remaining endpoints/outcomes (secondary outcomes 3.5) -->
+<!-- •	whether the endpoint/outcome reflect efficacy (beneficial effect) or harm (adverse effect) -->
+<!-- •	the rationale for the choice of trial endpoint/outcome -->
+<!-- •	For each endpoint/outcome, the trial protocol should define four components:  -->
+<!-- o	the specific measurement variable, which corresponds to the data collected directly from trial participants (e.g. all cause mortality);  -->
+<!-- o	the participant-level analysis metric, which corresponds to the format of the outcome data that will be used from each trial participant for analysis (e.g., change from baseline, final value, time to event); -->
+<!-- o	 the method of aggregation, which refers to the summary measure format for each trial group (e.g., mean, proportion with score > 2);  -->
+<!-- o	the specific measurement time point of interest for analysis -->
 
-3.4 Primary endpoint/outcome <!-- Aim: To identify a single response variable (primary endpoint/outcome) to answer the primary research question. --> <!-- The primary endpoint/outcome should be a clear, unarguable, quantitative measure of effect that will be the focus of the primary analysis and will drive the choice of sample size. Less is more e.g. “The primary endpoint/outcome is 28 day survival.” It may be pertinent to list the time point at which endpoint/outcome will be measured if it is possible to be measured more than once during the trial. The protocol should describe any rules, references or programmes for calculation of derived values and describe what form it will take for analysis (e.g. continuous, categorical, ordinal) --> <!-- Since there is only one choice of sample size, which may be based on the statistical power for the single primary analysis, there can only be one primary endpoint/outcome.  The exception to this is in a trial that is comparing a new diagnostic or measurement technique to an existing standard. In which case, it is acceptable to have two co-primary endpoints: the old and the new technique.  -->
+3.4	Primary endpoint/outcome
+<!-- Aim: To identify a single response variable (primary endpoint/outcome) to answer the primary research question. -->
+<!-- The primary endpoint/outcome should be a clear, unarguable, quantitative measure of effect that will be the focus of the primary analysis and will drive the choice of sample size. Less is more e.g. “The primary endpoint/outcome is 28 day survival.” It may be pertinent to list the time point at which endpoint/outcome will be measured if it is possible to be measured more than once during the trial. The protocol should describe any rules, references or programmes for calculation of derived values and describe what form it will take for analysis (e.g. continuous, categorical, ordinal) -->
+<!-- Since there is only one choice of sample size, which may be based on the statistical power for the single primary analysis, there can only be one primary endpoint/outcome.  The exception to this is in a trial that is comparing a new diagnostic or measurement technique to an existing standard. In which case, it is acceptable to have two co-primary endpoints: the old and the new technique.  -->
 
-3.5 Secondary endpoints/outcomes <!-- Aim: To identify a series of well established endpoints of clinical importance that in theory could be the primary endpoint in another trial --> <!-- This should be a sequence of concise statements referring to observations that say nothing about the trial objectives or analysis. There can be any number of secondary measures, although they should all be relevant to the declared aims of the trial -->
+3.5	Secondary endpoints/outcomes
+<!-- Aim: To identify a series of well established endpoints of clinical importance that in theory could be the primary endpoint in another trial -->
+<!-- This should be a sequence of concise statements referring to observations that say nothing about the trial objectives or analysis. There can be any number of secondary measures, although they should all be relevant to the declared aims of the trial -->
 
-3.6 Exploratory endpoints/outcomes <!-- Aim: To identify any other endpoints/outcomes which are not well established. -->
+3.6	Exploratory endpoints/outcomes 
+<!-- Aim: To identify any other endpoints/outcomes which are not well established. -->
 
-3.7 Table of endpoints/outcomes <!-- Aim: To give a clear and concise representation of all end/points/outcomes of the trial.   -->
+3.7 	Table of endpoints/outcomes
+<!-- Aim: To give a clear and concise representation of all end/points/outcomes of the trial.   -->
+
