--- a/anakinra.qmd
+++ b/anakinra.qmd
@@ -1,3 +1,14 @@
 ---
 title: "Anakinra"
 ---
+## Introduction
+Anakinra is an IL-1 receptor analogue.... 
+
+## Pharmacology
+
+## Why Anakinra in delirium?
+
+## Links
+
+## References
+
