--- a/index.qmd
+++ b/index.qmd
@@ -2,3 +2,15 @@
 title: "AnTIDOTe"
 ---
 
+## What is the AnTIDOTe Trial?
+
+## Who is eligible?
+
+## What are we measuring?
+
+## How many people will participate?
+
+## When will we know the results?
+
+## Can my relative have Anakinra for delirium?
+
