--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,9 @@
 ---
 title: "AnTIDOTe"
 ---
+## What is delirium?
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BPfZgBmcQB8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## What is the AnTIDOTe Trial?
 
